# TorchExperimenting

./: .gitignore  README.md  main.py  pyproject.toml
experiments/: __init__.py  example_experiment.py
experiments/nas/: nas-starter.py
experiments/rf-detr/: detection.py  webcam.py
notebooks/: example_notebook.ipynb
